--- a/stylestoregistration.css
+++ b/stylestoregistration.css
@@ -1,5 +1,5 @@
 #body {
-    background-image: url(https://images.pexels.com/photos/3695238/pexels-photo-3695238.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-color: #ffffff;
     background-size: cover;
     background-position: center;
     margin: 0;
