--- a/style.css
+++ b/style.css
@@ -372,3 +372,55 @@ header {
   object-fit: cover; /* Bisa menggunakan 'contain' jika ingin gambar terlihat seluruhnya */
   object-position: center; /* Menjaga posisi gambar tetap di tengah */
 }
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.left {
+  background: linear-gradient(135deg, #9ba4ad 0%, #00bfff 100%);
+    color: white;
+    text-align: center;
+    border: 1px solid black;
+    margin: 1rem;
+    padding: 2rem 2rem;
+  }
+}
+
+
+.right {
+  background-color: lightcoral;
+  width: 45%;}
+
+  .layoutright {
+    width: 100%;
+  
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+  }
+
+  .parent {
+    border: 1px solid black;
+    margin: 1rem;
+    padding: 2rem 2rem;
+    text-align: center;
+  }
+  .child {
+    display: inline-block;
+    border: 1px solid red;
+    padding: 1rem 1rem;
+    vertical-align: middle;
+  }
+
+  .featured-games{
+    display: flexb;
+    flex-wrap: wrap;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
+    margin-top: 2rem;
+  }
