--- a/style.css/content.css
+++ b/style.css/content.css
@@ -1,4 +1,19 @@
 
+  /* Untuk layar lebar (desktop) */
+@media (min-width: 768px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+/* Untuk layar kecil (ponsel) */
+@media (max-width: 767px) {
+  .container {
+    max-width: 100%;
+    padding: 10px;
+  }
+}
+
   /* Container untuk kartu produk */
   .card-container {
     display: grid;
